--- a/styles.css
+++ b/styles.css
@@ -407,7 +407,7 @@ table tr th, table tr td {
 }
 
 table tr td:active, table tr td:hover {
-  white-space: normal;
+  white-space: nowrap;
   transform: scale(1);
 }
 
