--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ body {
 .pg-new button, #change button {
   background: #f8fafb;
   border: 2px solid white;
-  padding: 3.5%;
+  padding: 2% 3%;
   border-radius: 10px;
   box-shadow: 0px 0px 5px #999;
 }
