--- a/styles.css
+++ b/styles.css
@@ -136,8 +136,11 @@ body {
     text-align: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
 }
+
+
 .pg-new {
   flex-direction: row;
   align-items: stretch;
@@ -633,6 +636,9 @@ table tr td:last-child:active, table tr td:last-child:hover{
     justify-content: center;
     align-items: stretch;
     gap: 5px;
+    border-left: 5px solid #4285f4;
+    padding-left: 5px;
+    margin-left: 2px;
 }
 
 #keterangan-ujian p {
