--- a/styles.css
+++ b/styles.css
@@ -575,14 +575,15 @@ table tr td:last-child:active, table tr td:last-child:hover{
     width: 100%;
     max-width: 640px;
     position: relative;
-    border: 0.5px solid rgba(190,190,190,.5);
+    border: 3.5px solid rgba(190,190,190,.5);
     border-radius: 10px;
+    margin-bottom: 1%;
 }
 #image-header {
     position: relative;
     height: auto;
     aspect-ratio: 4 / 1;
-    overflow: normal;
+    overflow: hidden;
 }
 
 
